--- a/newbie/article-preview-component/styles/style.scss
+++ b/newbie/article-preview-component/styles/style.scss
@@ -6,17 +6,17 @@
   width: 100%;
   height: 200px;
   background-size: cover;
-  background-image: url("/images/drawers-mobile.png");
+  background-image: url("../../article-preview-component/images/drawers-desktop.png");
   background-position: left bottom;
 
   @media screen and (min-width: v.$tablet-768-screen) {
-    background-image: url("/images/drawers-tablet.png");
+    background-image: url("../../article-preview-component/images/drawers-tablet.png");
     min-width: 229px;
     height: 346px;
   }
 
   @media screen and (min-width: v.$desktop-1024-screen) {
-    background-image: url("/images/drawers-desktop.png");
+    background-image: url("../../article-preview-component/images/drawers-desktop.png");
     min-width: 285px;
     height: 280px;
   }
