--- a/junior/time-tracking-dashboard/styles/style.css
+++ b/junior/time-tracking-dashboard/styles/style.css
@@ -119,7 +119,7 @@ svg:hover {
   height: 30px;
   border: none;
 }
-.btn-other p {
+.btn-other span {
   font-size: 1.125rem;
   line-height: 21px;
   letter-spacing: 0;
@@ -194,7 +194,7 @@ svg:hover {
   height: 30px;
   border: none;
 }
-.card .main-section .btn-other p {
+.card .main-section .btn-other span {
   font-size: 1.125rem;
   line-height: 21px;
   letter-spacing: 0;
