--- a/junior/newsletter-signup-form/styles/_layout.scss
+++ b/junior/newsletter-signup-form/styles/_layout.scss
@@ -28,8 +28,10 @@ body {
 
 main {
   background-color: v.$white;
+  min-height: 100vh;
 
   @media screen and (min-width: v.$tablet-540-screen) {
+    min-height: auto;
     border-radius: 36px;
     padding: 40px;
   }
