--- a/junior/newsletter-signup-form/styles/style.scss
+++ b/junior/newsletter-signup-form/styles/style.scss
@@ -22,7 +22,7 @@ button {
 
     .hero-img {
       width: 100%;
-      height: 284px;
+      height: auto;
 
       @media screen and (min-width: v.$tablet-540-screen) {
         border-radius: 15px;
