--- a/junior/time-tracking-dashboard/styles/_mixins.scss
+++ b/junior/time-tracking-dashboard/styles/_mixins.scss
@@ -131,6 +131,9 @@
 
     @media screen and (min-width: v.$desktop-1440-screen) {
       height: 199px;
+      justify-content: center;
+      gap: 24px;
+      padding: 32px;
     }
   }
 
@@ -138,7 +141,7 @@
     height: 213px;
   }
 
-  @media screen and (min-width: v.$desktop-1024-screen) {
+  @media screen and (min-width: v.$desktop-1440-screen) {
     height: 100%;
   }
 }
