--- a/junior/time-tracking-dashboard/styles/style.scss
+++ b/junior/time-tracking-dashboard/styles/style.scss
@@ -65,7 +65,7 @@ svg {
         @include m.text-preset-4;
         color: white;
 
-        @media screen and (min-width: v.$desktop-1024-screen) {
+        @media screen and (min-width: v.$desktop-1440-screen) {
           @include m.text-preset-2;
         }
       }
@@ -81,6 +81,7 @@ svg {
       justify-content: flex-start;
       align-items: start;
       height: 354px;
+      gap: 40px;
     }
   }
 
