--- a/junior/tip-calculator-app/styles/_layout.scss
+++ b/junior/tip-calculator-app/styles/_layout.scss
@@ -38,7 +38,7 @@ body {
     padding-bottom: 56px;
   }
 
-  @media screen and (min-width: v.$tablet-768-screen) {
+  @media screen and (min-width: v.$desktop-1440-screen) {
     padding: 0 max(0px, (100% - 920px)/2);
     padding-bottom: 56px;
   }
@@ -95,7 +95,6 @@ main {
   width: 100%;
   max-width: 920px;
   height: auto;
-  //   max-height: 800px;
   padding: 32px 24px;
   display: grid;
   gap: 32px;
