--- a/junior/tip-calculator-app/styles/style.css
+++ b/junior/tip-calculator-app/styles/style.css
@@ -130,10 +130,25 @@ input[type=number] {
   margin: 50px 0px;
 }
 
+h1 {
+  display: none;
+}
+
 label {
   font-size: 1rem;
   line-height: 24px;
   color: #5e7a7d;
+}
+
+.tip-percentage,
+.bill-amount {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.num-people > div {
+  margin-bottom: 8px;
 }
 
 .error {
