--- a/junior/tip-calculator-app/styles/style.scss
+++ b/junior/tip-calculator-app/styles/style.scss
@@ -21,8 +21,23 @@ input[type="number"] {
   margin: 50px 0px;
 }
 
+h1 {
+  display: none;
+}
+
 label {
   @include m.label;
+}
+
+.tip-percentage,
+.bill-amount {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.num-people > div {
+  margin-bottom: 8px;
 }
 
 .error {
