--- a/junior/tip-calculator-app/styles/style.scss
+++ b/junior/tip-calculator-app/styles/style.scss
@@ -115,7 +115,9 @@ input {
 
 .btn {
   @include m.btn;
+}
 
+.btn-hover {
   &:hover {
     background-color: v.$green-200;
     color: v.$green-900;
